--- a/seminars/seminar01-svd.tex
+++ b/seminars/seminar01-svd.tex
@@ -259,7 +259,7 @@ Find singular value decomposition of a matrix
             24 & 0 & 32
         \end{bmatrix}.
     \]
-    We calculate the new matrix $AA^*$  eigenvalues
+    We calculate the new matrix $AA^*$  eigenvectors
     \[      
         (AA^*-\lambda_1 I)\vec u_1 = 0
         \Leftrightarrow
