--- a/seminars/seminar01-svd.tex
+++ b/seminars/seminar01-svd.tex
@@ -1,3 +1,4 @@
+\fancyfoot[R]{v1.0.1}
 \section{Pseudoinverse matrices. Skeletonization. Singular value decomposition (SVD)}
 
 \begin{problem}{Skeletonization and pseudoinverse matrix}
@@ -174,11 +175,11 @@
     \begin{theorema}{How to find pseudoinverse using SVD}{}
         Let $U\Sigma V^*$ be the SVD of a matrix $A\in M_{m\times n}(\C)$, then
         $$
-            A^+=U\Sigma^+ V^*.
+            A^+=V\Sigma^+ U^*.
         $$
     \end{theorema}
 
-\begin{problem}{Singular Value Decomposition}
+T\begin{problem}{Singular Value Decomposition}
 Find singular value decomposition of a matrix
 \[
     A = \begin{bmatrix}
